Add user multiple active status endpoint and tests for this new endpoint. Refs #15 and #16